--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ function searchByLandUse() {
   if (def) {
     html += `
       <div class="definition-banner">
-        <strong>Definition:</strong> ${htmlEscape(def)}
+        <strong>Definition:</strong> ${def}
       </div>`;
   }
 
